tests/paczka1/fuzzy1/53849510.err
Error in line 3: ovPZJvE A354 30,1
Error in line 8: ovPZJvE S876 93,1
Error in line 12: S876 S748 54,5
Error in line 28: S86 S48 332,2
Error in line 10: ovPZJvE A354 0,7
Error in line 29: ovPZJvE S748 43,2
Error in line 38: 2I3H S748 39,09
Error in line 35: 2I3H A354 89,5
